# sns-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
.github/actions/prepare-js-kit-env/: action.yml
.github/actions/prepare-spl-name-service-env/: action.yml
.github/workflows/: check-sns-sdk-kit.yml  check-spl-name-service.yml
cf-worker/: package-lock.json  package.json  wrangler.toml
cf-worker/src/: index.ts
cli/: Cargo.toml
cli/src/: main.rs
examples/js/: package.json
examples/js/batch-registration/: domain-list.json  index.ts
examples/react-app/: index.html  package-lock.json  package.json
examples/react-app/src/: App.tsx  Example.tsx
examples/vue-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
examples/vue-app/src/: App.vue  app.vue  main.ts  style.css  types.d.ts
golang/: go.mod  go.sum
golang/bindings/: bindings.go
golang/constants/: constants.go
golang/errors/: errors.go
golang/favorite-domain/: favorite-domain.go
golang/instructions/: instructions.go
golang/nft/: name-tokenizer.go  nft.go
golang/record/: record.go
golang/resolve/: resolve.go
golang/state/: mint.go  nameRegistryState.go  nftUtil.go  tokenData.go
golang/types/: record.go  types.go
golang/utils/: utils.go
js/: README.md  jest.config.cjs  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
js-kit/: .gitignore  .prettierrc.mjs  LICENSE  README.md  eslint.config.mjs  jest.config.mjs  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
js-kit/src/: codecs.ts  errors.ts  index.ts
js-kit/src/address/: getDomainsForAddress.ts  getNftsForAddress.ts  getPrimaryDomain.ts  getPrimaryDomainsBatch.ts  index.ts
js-kit/src/bindings/: burnDomain.ts  createNameRegistry.ts  createRecord.ts  createRecordV2Instruction.ts  createReverse.ts  createReverseName.ts  createSubdomain.ts  deleteNameRegistry.ts  deleteRecord.ts  ethValidateRecordV2Content.ts  index.ts  registerDomain.ts  registerDomainNameV2.ts  registerFavorite.ts  registerWithNft.ts  setPrimaryDomain.ts  transferDomain.ts  transferNameOwnership.ts  transferSubdomain.ts  updateNameRegistry.ts  updateNameRegistryData.ts  updateRecord.ts  updateRecordInstruction.ts  updateRegistry.ts  updateSolRecordInstruction.ts  validateRecordV2Content.ts  validateRoa.ts  validateRoaEthereum.ts  validateRoaSolana.ts  verifyRecordRoa.ts  verifyRecordWithEthSig.ts  verifyRecordWithSolSig.ts  writRoaRecordV2.ts  writeRoa.ts
js-kit/src/constants/: addresses.ts  index.ts  pythFeeds.ts  records.ts
js-kit/src/domain/: getAllDomains.ts  getDomainAddress.ts  getDomainOwner.ts  getDomainRecord.ts  getDomainRecords.ts  getSubdomains.ts  index.ts  resolveDomain.ts
js-kit/src/instructions/: allocateAndPostRecordInstruction.ts  burnDomainInstruction.ts  burnInstruction.ts  createAtaInstruction.ts  createInstruction.ts  createInstructionV3.ts  createNameRegistryInstruction.ts  createRegistryInstruction.ts  createReverseInstruction.ts  createSplitV2Instruction.ts  createV2Instruction.ts  createWithNftInstruction.ts  deleteInstruction.ts  deleteNameRegistryInstruction.ts  deleteRecordInstructio copy.ts  index.ts  reallocInstruction.ts  registerFavoriteInstruction.ts  transferInstruction.ts  updateInstruction.ts  updateNameRegistryInstruction.ts  updateRecordInstruction.ts  updateRegistryInstruction.ts  validateRoaEthereumInstruction.ts  validateRoaInstruction.ts  validateRoaSolanaInstruction.ts  verifyRoaInstruction.ts  verifyWithEthSigInstruction.ts  verifyWithSolSigInstruction.ts  writeRoaInstruction.ts
js-kit/src/nft/: getNftMint.ts  getNftOwner.ts  index.ts
js-kit/src/record/: getRecordV1Address.ts  getRecordV2Address.ts  index.ts  verifyRecordRightOfAssociation.ts  verifyRecordStaleness.ts
js-kit/src/states/: index.ts  nft.ts  primaryDomain.ts  record.ts  registry.ts
js-kit/src/types/: index.ts  validation.ts
js-kit/src/utils/: check.ts  deriveAddress.ts  getPythFeedAddress.ts  getReverseAddress.ts  getReverseAddressFromDomainAddress.ts  index.ts  int.ts  reverseLookup.ts  reverseLookupBatch.ts
js-kit/tests/: address.test.ts  binding.test.ts  constants.ts  domain.test.ts  nft.test.ts  record.test.ts  utils.test.ts
js/benchmarks/: nft.ts
js/src/: bindings.ts  constants.ts  custom-bg.ts  devnet.ts  error.ts  favorite-domain.ts  index.ts  instructions.ts  int.ts  nft.ts  record.ts  record_v2.ts  resolve.ts  sns-ip-5.ts  state.ts  tokens.ts  twitter_bindings.ts  utils.ts
js/tests/: all-registered.test.ts  burn.test.ts  derivation.test.ts  devnet.test.ts  favorite.test.ts  get-domain-price-from-name.test.ts  get-domains-reversed.test.ts  get-domains.test.ts  nft.test.ts  pyth.test.ts  records-v2.test.ts  records.test.ts  registration.test.ts  resolve.test.ts  reverse-lookup.test.ts  reverse.test.ts  signature.test.ts  sub.test.ts  twitter.test.ts
python/: .gitignore  setup.py
python/sns_sdk/: blockchain.py  domains.py  nft.py  records.py
react/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
react/src/: index.tsx  types.tsx
rust/: Cargo.toml
rust-crates/sns-cli/: Cargo.toml
rust-crates/sns-cli/src/: main.rs
rust-crates/sns-sdk/: Cargo.toml
rust-crates/sns-sdk/src/: cluster_utils.rs  derivation.rs  error.rs  favourite_domain.rs  lib.rs  register.rs  utils.rs
rust-crates/sns-sdk/src/blocking/: mod.rs  register.rs
rust-crates/sns-sdk/src/non_blocking/: resolve.rs
rust-crates/sns-sdk/src/record/: mod.rs  record_v1.rs  record_v2.rs
rust/src/: derivation.rs  error.rs  favourite_domain.rs  lib.rs  record.rs  register.rs  resolve.rs  utils.rs
rust/src/blocking/: register.rs  resolve.rs
rust/src/non_blocking/: register.rs  resolve.rs
rust/src/record/: mod.rs  record_v1.rs  record_v2.rs
rust/src/sync/: resolve.rs
vue/: LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
vue/src/: index.ts
widget/: .env.template  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
widget/src/: app.tsx  index.css  main.tsx
(+219 files in other folders)
