[package]
name = "sns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.14.1", features = ["macros", "rt-multi-thread"] }
solana-sdk = "<1.16.0"
solana-client = "<1.16.0"
spl-name-service = {version = "0.2.0", features = ["no-entrypoint"]}
solana-program = "<1.16.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde_json = "1.0.94"
base64 = "0.21.0"
serde = {version = "1.0.153", features = ["derive"] }
indicatif = "0.17.3"
regex = "1.7.1"
anyhow = "1.0.69"
console = "0.15.5"
sns-sdk = { path = "../rust" }
walkdir = "2.3.3"
