[package]
name = "sns-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = []

[dependencies]
spl-name-service = {git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"]}
solana-program = "1.9.2"
derive_more = "0.99.17"
solana-sdk = "1.15.2"
solana-client = "1.15.2"
bytemuck = "1.13.1"
