[package]
name = "sns-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = []

[dependencies]
spl-name-service = {git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"]}
solana-program = "1.9.2"
derive_more = "0.99.17"
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-account-decoder = "1.15.2"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
spl-token = "3.5.0"


[dev-dependencies]
tokio = {version = "1.26.0", features = ["full"]}
dotenv = "0.15.0"
