[package]
name = "sns-sdk"
version = "0.1.1"
edition = "2021"
description = "The Rust SDK provides everything you need for resolving domain ownership and records within the Solana Name Service (SNS)"
license = "MIT"
authors = ["Bonfida <contact@bonfida.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = []

[dependencies]
spl-name-service = {git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"], version = "0.2.0"}
solana-program = "1.9.2"
derive_more = "0.99.17"
solana-sdk = "1.14.18"
solana-client = "1.14.18"
solana-account-decoder = "1.14.2"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
spl-token = "3.5.0"
borsh = "0.9"


[dev-dependencies]
tokio = {version = "1.26.0", features = ["full"]}
dotenv = "0.15.0"
