[package]
name = "sns-sdk"
version = "1.5.1"
edition = "2021"
description = "The Rust SDK provides everything you need for resolving domain ownership and records within the Solana Name Service (SNS)"
homepage = "https://www.sns.id/"
repository = "https://github.com/Bonfida/sns-sdk"
license = "MIT"
authors = ["Bonfida <contact@bonfida.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = []
devnet = ["sns-warp-common/devnet"]

[dependencies]
spl-name-service = { version = "0.3.0", features = ["no-entrypoint"] }
solana-program = "1.18.11"
derive_more = "0.99.17"
solana-sdk = "1.18.11"
solana-client = "1.18.11"
solana-account-decoder = "1.18.11"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
spl-token = { version="4.0.0", features= ["no-entrypoint"] }
borsh = "0.10.3"
bonfida-utils = "0.4.4"
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
bech32 = "0.9.1"
punycode = "0.4.1"
name-tokenizer = { version = "2.0.0", features = ["no-entrypoint"]}
sns-records = "0.1.0"

futures = "0.3.28"
bytemuck = "1.13.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
sns-warp-common = { version = "0.1.0", features = ["solana"] }

[dev-dependencies]
tokio = {version = "1.26.0", features = ["full"]}
dotenv = "0.15.0"
rand = "0.8.5"
